--- a/index.html
+++ b/index.html
@@ -36,13 +36,18 @@
       } */
 
       body {
-        width: 1440px;
+        /* width: 1440px; */
         font-family: "Red Hat Display", "sans serif";
         background: url(images/pattern-background-desktop.svg);
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-color: hsl(225, 100%, 94%);
+        background-position: top;
       }
       .container {
         width: 320px;
-        margin: 50px auto;
+        height: 480px;
+        margin: 100px auto;
         background-color: #fff;
         border-radius: 12px;
         overflow: hidden;
