--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         background: url(images/pattern-background-desktop.svg);
         background-size: 100%;
         background-repeat: no-repeat;
-        /* background-color: hsl(225, 100%, 94%); */
-        background-color: red;
+        background-color: hsl(225, 100%, 94%);
         background-position: top;
       }
       .container {
