--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
       }
       .container {
         width: 320px;
-        height: 480px;
-        margin: 100px auto;
+        height: 460px;
+        margin: 50px auto;
         background-color: #fff;
         border-radius: 12px;
         overflow: hidden;
+        color: hsl(223, 47%, 23%);
       }
       .hero-img {
         width: 100%;
